kubernetes/apps/default/immich/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Immich
    gethomepage.dev/group: Superquinquin
    gethomepage.dev/icon: immich.png
    gethomepage.dev/description: Gestion de photos
    gethomepage.dev/external: "true"
spec:
  hostnames:
    - "photos.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
